# tt-rust-actix

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml
migrations/20221122181639_create_table_balance/: down.sql  up.sql
migrations/20221122182621_create_table_transaction/: down.sql  up.sql
migrations/20221122201352_create_table_balance_reserve/: down.sql  up.sql
migrations/20221129084900_alter_transaction_table_add_idempotency_key/: down.sql  up.sql
migrations/20221129093401_alter_transaction_table_add_order_id_index/: down.sql  up.sql
src/: currency.rs  idgen.rs  main.rs  models.rs  mutations.rs  queries.rs  responses.rs  routes.rs  schema.rs
src/database/: connect.rs  idgen.rs  mod.rs  models.rs  mutations.rs  queries.rs
src/proto/: api.proto
