[package]
name = "tt-rust"
version = "0.1.0"
edition = "2021"
authors = ["Konstantin Bryzgalin <constb@outlook.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
actix-request-identifier = "4.1.0"
actix-web = { version = "4.2.1", features = ["actix-macros"] }
anyhow = "1.0.68"
bigdecimal = "0.3.0"
bytes = "1.3.0"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "serde_json", "chrono", "numeric"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.6"
fastrand = "1.8.0"
once_cell = "1.17.0"
prost = "0.11.6"
prost-types = "0.11.6"
prost-wkt-types = "0.4.0"
rs-snowflake = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.6"
